--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -22,3 +22,19 @@ jobs:
 
       - name: Lint
         run: make lint
+
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version-file: 'go.mod'
+
+      - name: Test
+        run: make test
+
